tests/paczka1/small_fuzzy/32283973.err
Error in line 1: cAEb A530 67,9
Error in line 3: cAEb A495 71,7
